function(get_compiler_info COMPILER_NAME OUT_PREFIX)
    find_program(COMPILER_EXE NAMES "${COMPILER_NAME}" NO_CACHE)
    if(NOT COMPILER_EXE)
        return()
    endif()

    execute_process(
        COMMAND ${COMPILER_EXE} -dumpfullversion -dumpversion
        OUTPUT_VARIABLE VERSION
        OUTPUT_STRIP_TRAILING_WHITESPACE
    )

    string(REPLACE "." ";" VER_LIST ${VERSION})
    list(GET VER_LIST 0 MAJOR)
    list(GET VER_LIST 1 MINOR)

    get_filename_component(COMPILER_BASENAME ${COMPILER_EXE} NAME)

    set(${OUT_PREFIX}_COMPILER        ${COMPILER_EXE} PARENT_SCOPE)
    set(${OUT_PREFIX}_COMPILER_BASENAME ${COMPILER_BASENAME} PARENT_SCOPE)
    set(${OUT_PREFIX}_VERSION         ${VERSION}      PARENT_SCOPE)
    set(${OUT_PREFIX}_VERSION_MAJOR   ${MAJOR}        PARENT_SCOPE)
    set(${OUT_PREFIX}_VERSION_MINOR   ${MINOR}        PARENT_SCOPE)
endfunction()

get_compiler_info(gcc GCC_C)
get_compiler_info(g++ GCC_CXX)

message(STATUS "gcc: ${GCC_C_COMPILER}, version ${GCC_C_VERSION} major ${GCC_C_VERSION_MAJOR}")
message(STATUS "g++: ${GCC_CXX_COMPILER}, version ${GCC_CXX_VERSION} major ${GCC_CXX_VERSION_MAJOR}")

add_custom_command(
    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/libgomp${LIBOMP_LIBRARY_SUFFIX}
    COMMAND ${CMAKE_COMMAND} -E create_symlink
            ${LIBOMP_LIBRARY_DIR}/libompv${LIBOMP_LIBRARY_SUFFIX}
            ${CMAKE_CURRENT_BINARY_DIR}/libgomp${LIBOMP_LIBRARY_SUFFIX}
    DEPENDS ompv
    COMMENT "Creating symlink libgomp.so -> libompv.so"
)

add_custom_target(libompv_gomp ALL
    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/libgomp${LIBOMP_LIBRARY_SUFFIX} ompv
)

set(OPENMP_TEST_COMPILER_FEATURE_LIST ${GCC_C_COMPILER_BASENAME} ${GCC_C_COMPILER_BASENAME}-${GCC_C_VERSION} ${GCC_C_COMPILER_BASENAME}-${GCC_C_VERSION_MAJOR} ${GCC_C_COMPILER_BASENAME}-${GCC_C_VERSION_MAJOR}.${GCC_C_VERSION_MINOR})

include(../cmake/RuntimeTargetTemplate.cmake)
add_library(ompvgt-print-callback INTERFACE)
target_include_directories(ompvgt-print-callback INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/../ompt)

add_openmp_testsuite(check-libompv-gomp "Running libompv-gomp tests" ${CMAKE_CURRENT_BINARY_DIR} DEPENDS ompv libompv_gomp)
# Add target check-ompt, but make sure to not add the tests twice to check-openmp.
add_openmp_testsuite(check-ompvg "Running OMPVT tests" ${CMAKE_CURRENT_BINARY_DIR} EXCLUDE_FROM_CHECK_ALL DEPENDS ompv)

# Configure the lit.site.cfg.in file
set(AUTO_GEN_COMMENT "## Autogenerated by libompv-gomp configuration.\n# Do not edit!")
# Override the detected openmp flag to libompv
set(OPENMP_TEST_OPENMP_FLAGS "${OPENMP_TEST_OPENMP_FLAGS} -fopenmp")

set(OPENMP_TEST_C_COMPILER "${GCC_C_COMPILER}")
set(OPENMP_TEST_CXX_COMPILER "${GCC_CXX_COMPILER}")
set(OPENMP_TEST_Fortran_COMPILER "")
# set(OPENMP_TEST_COMPILER_FEATURES "['gcc', 'gcc-11', 'gcc-11.4', 'gcc-11.4.0', 'x86_64']")
set(CMAKE_C_COMPILER_FRONTEND_VARIANT "GNU")

configure_file(../lit.site.cfg.in lit.site.cfg @ONLY)
